Update benchmarks for sets and ranges